Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </ul>
 
 <h2>
-<a id="god" class="anchor" href="#god" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>God</h2>
+<a id="wave" class="anchor" href="#wave" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wave</h2>
 
 <ul>
 <li>
