Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h2>
 <a id="viiper_orbit" class="anchor" href="#viiper_orbit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Viiper_Orbit</h2>
 
-<p><img src="https://pbs.twimg.com/profile_images/701833187178237952/PgBZHy6B_400x400.png" alt=""></p>
+<p><img src="https://raw.githubusercontent.com/OVClan/ovclan.github.io/d4dec6b1363222b603d86efdca8ba476fa6d7960/images/%5E355ACD8459782CCC69A08021B6FACFA30EF77BFC2449BCA1DE%5Epimgpsh_thumbnail_win_distr.jpg" alt=""></p>
 
 <ul>
 <li><strong>Leader</strong></li>
