Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -101,10 +101,43 @@
 </li>
 </ul>
 
+<h2>
+<a id="reaper" class="anchor" href="#reaper" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reaper</h2>
+
+<ul>
+<li>
+<strong>Member</strong> </li>
+<li>
+<strong>Youtube:</strong> <a href="https://www.youtube.com/channel/UCr_ky9bPhQeFMKFFxSVUNKA/">https://www.youtube.com/channel/UCr_ky9bPhQeFMKFFxSVUNKA/</a>
+</li>
+</ul>
+
+<h2>
+<a id="yo-im-remiix" class="anchor" href="#yo-im-remiix" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Yo Im Remiix</h2>
+
+<ul>
+<li>
+<strong>Member</strong> </li>
+<li>
+<strong>Youtube:</strong> <a href="https://www.youtube.com/channel/UCRiS2iF33gR1IJHkt3hbgwQ/">https://www.youtube.com/channel/UCRiS2iF33gR1IJHkt3hbgwQ/</a>
+</li>
+</ul>
+
+<h2>
+<a id="gene" class="anchor" href="#gene" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gene</h2>
+
+<ul>
+<li>
+<strong>Member</strong> </li>
+<li>
+<strong>Youtube:</strong> <a href="https://www.youtube.com/channel/UCLuktHLK4DU_S-8JqYpcbZQ/">https://www.youtube.com/channel/UCLuktHLK4DU_S-8JqYpcbZQ/</a>
+</li>
+</ul>
+
 <h1>
 <a id="sample-videos" class="anchor" href="#sample-videos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sample Videos</h1>
 
-
+<p><a href="https://www.youtube.com/watch?v=YOUTUBE_VIDEO_ID_HERE"><img src="https://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg" alt="IMAGE ALT TEXT HERE"></a></p>
 
 
       </section>
